...
    if (status == PluginSearchStatus.noResult) {
      return GeneralErrorWidget(
        errMsg: '${plugin.name} 无结果 使用别名或左右滑动以切换到其他视频来源',
        actions: [
          GeneralErrorButton(
            onPressed: () => showAliasSearchDialog(plugin.name),
            text: '别名检索',
          ),
          GeneralErrorButton(
            onPressed: () => showCustomSearchDialog(plugin.name),
            text: '手动检索',
          ),
        ],
      );
    }
    if (status == PluginSearchStatus.error) {
      return GeneralErrorWidget(
...
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: Theme.of(context).colorScheme.surface,
      body: Column(
        children: [
          MaterialBottomSheetHeader(
            title: '选择播放源',
            description: '正在检索“$keyword”',
            onClose: () => Navigator.of(context).pop(),
          ),
          MaterialBottomSheetTabBar(
            isScrollable: true,
            tabAlignment: TabAlignment.center,
...
