...
            onPressed: _openSourceSheet,
            child: Container(
              height: 48,
              constraints: BoxConstraints(minWidth: 112),
              child: const Align(
                alignment: Alignment.centerLeft,
                child: Text('手动选择'),
              ),
            ),
          ),
        ],
      );
    });
...
